codemp/generated/game/g_target.h

void Use_Target_Give( gentity_t *ent, gentity_t *other, gentity_t *activator );
void SP_target_give( gentity_t *ent );
void Use_target_remove_powerups( gentity_t *ent, gentity_t *other, gentity_t *activator );
void SP_target_remove_powerups( gentity_t *ent );
void Think_Target_Delay( gentity_t *ent );
void Use_Target_Delay( gentity_t *ent, gentity_t *other, gentity_t *activator );
void SP_target_delay( gentity_t *ent );
void Use_Target_Score( gentity_t *ent, gentity_t *other, gentity_t *activator );
void SP_target_score( gentity_t *ent );
void Use_Target_Print( gentity_t *ent, gentity_t *other, gentity_t *activator );
void SP_target_print( gentity_t *ent );
void Use_Target_Speaker( gentity_t *ent, gentity_t *other, gentity_t *activator );
void SP_target_speaker( gentity_t *ent );
void target_laser_think( gentity_t *self );
void target_laser_on( gentity_t *self );
void target_laser_off( gentity_t *self );
void target_laser_use( gentity_t *self, gentity_t *other, gentity_t *activator );
void target_laser_start( gentity_t *self );
void SP_target_laser( gentity_t *self );
void target_teleporter_use( gentity_t *self, gentity_t *other, gentity_t *activator );
void SP_target_teleporter( gentity_t *self );
void target_relay_use( gentity_t *self, gentity_t *other, gentity_t *activator );
void SP_target_relay( gentity_t *self );
void target_kill_use( gentity_t *self, gentity_t *other, gentity_t *activator );
void SP_target_kill( gentity_t *self );
void SP_target_position( gentity_t *self );
void SP_target_location( gentity_t *self );
void target_counter_use( gentity_t *self, gentity_t *other, gentity_t *activator );
void SP_target_counter( gentity_t *self );
void target_random_use( gentity_t *self, gentity_t *other, gentity_t *activator );
void SP_target_random( gentity_t *self );
void scriptrunner_run( gentity_t *self );
void target_scriptrunner_use( gentity_t *self, gentity_t *other, gentity_t *activator );
void SP_target_scriptrunner( gentity_t *self );
void G_SetActiveState( char *targetstring, qboolean actState );
void target_activate_use( gentity_t *self, gentity_t *other, gentity_t *activator );
void target_deactivate_use( gentity_t *self, gentity_t *other, gentity_t *activator );
void SP_target_activate( gentity_t *self );
void SP_target_deactivate( gentity_t *self );
void target_level_change_use( gentity_t *self, gentity_t *other, gentity_t *activator );
void SP_target_level_change( gentity_t *self );
void target_play_music_use( gentity_t *self, gentity_t *other, gentity_t *activator );
void SP_target_play_music( gentity_t *self );